# vigilance

./: Cargo.toml  LICENSE  README.md  dev.sh
.github/: .config.js  .pre-commit.js
.github/workflows/: pull-request.yml  release.yml
docs/diagrams/: class-diagram.mmd
src/: config.rs  error.rs  log.rs  main.rs  model.rs  notify.rs  utils.rs  watch.rs
