[package]
name = "vigilance"
# Version will be updated by CI in `release` branch.
# Avoid modifying version manually or it will break CI


version = "0.1.0"


edition = "2024"

[lints.clippy]
new_without_default = "allow"

[dependencies]
battery = "0.7.8"
dbus = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
sysinfo = "0.38.4"
thiserror = "2.0.18"
wifiscanner = "0.5.1"
